[package]
name = "tucs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# TODO: update dependencies
[dependencies]
bitflags = "1.3.2"
volatile = "0.2.6"
bootloader ="0.9.22"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.4"
x86_64 = "0.14.10"
uart_16550 = "0.2.18"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 1000